ssh-key, figures, environment contribs

--- a/slides/Makefile
+++ b/slides/Makefile
@@ -5,6 +5,7 @@ LECTURES= \
 03_disk_areas.md \
 04_modules.md \
 05_batch_jobs.md \
+06_understanding_usage.md \
 07_allas.md \
 08_installing.md \
 09_singularity.md \
